Added Überadmin-Mode where Admins can do anything
in the regular UI

Squashed commit of the following:

commit d998e24e01f473656f8217a5b1f5a15b10c896db
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 7 10:37:24 2013 +0200

    Running filter set in chrome

commit ef33ae08da1ece0033dfeb46304e3194e082986e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 7 09:44:48 2013 +0200

    Deleted admin_switch_to_superuser_mode feature file

commit 699c3da164b620a8296259d38248cbb1b394fbb3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 7 09:43:59 2013 +0200

    Finished Uberadmin feature tests

commit 79dabc602b5c7685013819da6cfdeaa6ea1ce60a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue May 7 09:43:39 2013 +0200

    Changed redirect behavior for not_authorized

commit 5a8bd7ec1b4440d3a7115458bfb73030d86a6c13
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 17:09:55 2013 +0200

    Implemented becoming Überadmin  and leaving Überadmin

commit e44f1cc73c8d29c51f8d9191583104e9b91d6eaa
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 16:19:59 2013 +0200

    Evaluate act_as_uberadmin in user#authorized?

commit b88190fa8b6d12c4ae3eb8a8f61d3cbd367df875
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 15:28:36 2013 +0200

    Bypassing accessible by user for uberadmin

commit 7c9b2fb0f1ff20fe862a0085ccd46dee6e6f8fef
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 15:25:46 2013 +0200

    Fatter border to highlight _uberadmin

commit 4b1278700e6010fd48dc738d00072c1555168ddf
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 14:49:52 2013 +0200

    Virtual attribute act_as_uberadmin for user model

    changed session variable from uberadmin to act_as_uberadmin

commit 3e4b66ff7a80ecab4e1f67ec7b760c3db87dedc9
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon May 6 14:35:34 2013 +0200

    Alert border for uberadmin mode

commit d96d6daadb433fecbf44f341738eedd9d131a8fc
Author: Thomas Schank <DrTom@schank.ch>
D

--- a/app/views/application/header/_user.html.haml
+++ b/app/views/application/header/_user.html.haml
@@ -26,6 +26,15 @@
           %a.strong{:href => app_admin_root_path}
             %i.icon-admin.ui-drop-icon
             Admin
+        %li.ui-drop-item
+          - if session[:act_as_uberadmin] == true
+            = link_to app_admin_exit_uberadmin_path, method: 'POST', class: 'strong' do
+              %i.icon-admin.ui-drop-icon
+              Verlasse Überadmin-Modus
+          - else
+            = link_to app_admin_enter_uberadmin_path, method: 'POST', class: 'strong' do
+              %i.icon-admin.ui-drop-icon
+              Werde Überadmin 
       %li.ui-drop-item
         %a.strong{:href => "/logout"} 
           %i.icon-power-off.ui-drop-icon
