--- a/app/views/filter_sets/show.html.haml
+++ b/app/views/filter_sets/show.html.haml
@@ -21,7 +21,7 @@
 
       = render :partial => "media_resources/list/toolbar", 
                  :locals => {:title => "Filterset enthält",
-                             :subtitle => "#{@filter_set.child_media_resources.accessible_by_user(current_user).count} Inhalte",
+                             :subtitle => "#{@filter_set.child_media_resources(current_user).accessible_by_user(current_user).count} Inhalte",
                              :actions => render(:partial => "media_sets/actions/save_display_settings")}
 
       = render :partial => "media_resources/list/filterbar"
