Fix child_media_resources in FilterSet
  * Derive FilterSet directly from MediaResource
  * decouple filter_set controller from media_set controller
  * rename child_media_resources and fix several bugs

Squashed commit of the following:

commit 746fdd91ac683d17ea75e94c688d27eb7c64bd09
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri May 10 17:18:36 2013 +0200

    Fix

commit eb1ea066d2fc369257f00393a51e7147c73b1f72
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri May 10 16:54:05 2013 +0200

    Added children for FilterSet

commit d2f0c02f322d03e76bf2fd6145f5fa720bc18958
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri May 10 16:22:29 2013 +0200

    Defined parents for FilterSet

commit eb68c22c1511092f256f696dda6ede6a7c0499ff
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri May 10 16:14:01 2013 +0200

    Renamed child_media_resources to filtered_resources for filter_set

commit 36bfca3cff8192c47af5498dedc5122146919f07
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri May 10 09:07:07 2013 +0200

    Derive FilterSet directly from MediaResource and decouple controller

    Derive FilterSet from MediaResource

    wip a lot

    Fixes

    Fixed can_edit? in partial

--- a/app/views/filter_sets/_category.html.haml
+++ b/app/views/filter_sets/_category.html.haml
@@ -10,4 +10,4 @@
     .ui-thumbnail-meta
       %h3.ui-thumbnail-meta-title= category.title
       %p.ui-thumbnail-meta-subtitle= category.description
-      %span.ui-thumbnail-meta-extension= category.child_media_resources.count
+      %span.ui-thumbnail-meta-extension= category.filtered_resources(current_user).count
