Umbenennungen with Susanne

--- a/app/assets/javascripts/views/media_resources/media_resource.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/media_resource.tmpl.haml
@@ -36,5 +36,5 @@
       {{if meta_data}}
       {{tmpl({meta_data: meta_data}) App.renderPath("media_resources/meta_data_list_block")}}
       {{/if}}
-    .ui-resource-description{:"data-context" => "institution"}
-    .ui-resource-extension{:"data-context" => "nutzung"}
+    .ui-resource-description{:"data-context" => "Institution"}
+    .ui-resource-extension{:"data-context" => "Nutzung"}
