--- a/app/views/media_resources/edit/_field.html.haml
+++ b/app/views/media_resources/edit/_field.html.haml
@@ -34,10 +34,9 @@
         %li.ui-drop-item
           .ui-container.overlaid
             .title-s.separated.phs.pvs 
-              = _("Apply field to all items")
+              Werte übertragen
           %a{:"data-overwrite" => "true"}
-            = _("Overwrite existing values")
+            Werte auf alle Inhalte übertragen
           %a{:"data-overwrite" => "false"}
-            Bestehnde Werte 
-            %strong nicht
-            überschreiben
+            Freie Felder füllen
+
