Added adding and editing groups in admin interface

--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -2,6 +2,14 @@
   %i.icon-user
   Groups
 
+
+%ul.inline
+
+  %li
+    = link_to new_app_admin_group_path, class: 'btn btn-success' do
+      %i.icon-plus
+      New group
+
 .row
 
   %div.span3
