--- a/app/views/media_entries/_export.html.haml
+++ b/app/views/media_entries/_export.html.haml
@@ -33,4 +33,5 @@
 
   .ui-modal-footer
     .ui-actions
-      %a.button{"aria-hidden" => "true", "data-dismiss" => "modal"} Schliessen
+      %a.button{"aria-hidden" => "true", "data-dismiss" => "modal"}
+        = _("Close")
