--- a/app/views/media_entries/_meta_contexts.html.haml
+++ b/app/views/media_entries/_meta_contexts.html.haml
@@ -13,4 +13,5 @@
             - unless meta_data.blank?
               = meta_data
             - else
-              %dt.media-data-title.title-xs-alt Es sind keine Metadaten zu diesem Kontext bereit gestellt.
+              %dt.media-data-title.title-xs-alt 
+                = _("There are no metadata available for this context")
