--- a/app/views/media_entries/_objective_meta_data.html.haml
+++ b/app/views/media_entries/_objective_meta_data.html.haml
@@ -1,4 +1,5 @@
-%h3.title-l.separated.mbl Datei
+%h3.title-l.separated.mbl
+  = _("File")
 %table.borderless
   %tbody
     - @objective_meta_data.each do |meta_datum|
