--- a/app/views/media_entries/edit_multiple.html.haml
+++ b/app/views/media_entries/edit_multiple.html.haml
@@ -7,7 +7,8 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Metadata editieren
+          %h1.title-xl
+            = _("Edit metadata")
 
     .app-body-ui-container
 
@@ -37,9 +38,9 @@
 
           .ui-actions.phl.pbl.mtl
             %a.link.weak{:href => root_path}
-              Abbrechen
+              = _("Cancel")
             %button.primary-button.large
-              Speichern
+              = _("Save")
 
   .app-footer-push
 = render :partial => "application/footer"
