--- a/app/views/media_entries/export/_original_meta_data.html.haml
+++ b/app/views/media_entries/export/_original_meta_data.html.haml
@@ -1,13 +1,14 @@
 .ui-export-block
 
   .col1of2
-    %p Originaldatei mit gleichen Metadaten wie beim Hochladen ins Medienarchiv.
+    %p
+      = _("Originial file, metadata as they were when it was uploaded into the archive.")
 
   .col1of2.by-right
 
     .dropdown.ui-dropdown.stick-right
       %a.button.dropdown-toggle.ui-drop-toggle{:"data-toggle" => "dropdown"}
-        Datei mit ursprünglichen Metadaten
+        = _("File containing its original metadata")
         %i.icon-arrow-down
 
       %ul.dropdown-menu.ui-drop-menu.absolute{"aria-labelledby" => "dLabel", :role => "menu"}
