--- a/app/views/media_entries/export/_with_latest_meta_data.html.haml
+++ b/app/views/media_entries/export/_with_latest_meta_data.html.haml
@@ -1,13 +1,14 @@
 .ui-export-block
 
   .col1of2
-    %p Die aktuellen Metadaten aus dem Medienarchiv im Format XMP/IPTC sind direkt in die Datei eingeschrieben.
+    %p
+      = _("Current metadata from the media archive is written directly into the file in the XMP/IPTC format.")
 
   .col1of2.by-right
 
     .dropdown.ui-dropdown.stick-right
       %a.primary-button.dropdown-toggle.ui-drop-toggle{:"data-toggle" => "dropdown"}
-        Datei mit aktuellen Metadaten
+        = _("File with current metadata")
         %i.icon-arrow-down
 
       %ul.dropdown-menu.ui-drop-menu.absolute{"aria-labelledby" => "dLabel", :role => "menu"}
