--- a/app/views/media_entries/export/_without_meta_data.html.haml
+++ b/app/views/media_entries/export/_without_meta_data.html.haml
@@ -1,13 +1,14 @@
 .ui-export-block
 
   .col1of2
-    %p Datei ohne eingeschriebene Metadaten.
+    %p 
+      = _("File without embedded metadata.")
 
   .col1of2.by-right
 
     .dropdown.ui-dropdown.stick-right
       %a.button.dropdown-toggle.ui-drop-toggle{:"data-toggle" => "dropdown"}
-        Datei ohne Metadaten
+        = _("File without metadata")
         %i.icon-arrow-down
 
       %ul.download.dropdown-menu.ui-drop-menu.absolute{"aria-labelledby" => "dLabel", :role => "menu"}
