--- a/app/views/media_entries/previews/document/_full_document.html.haml
+++ b/app/views/media_entries/previews/document/_full_document.html.haml
@@ -30,13 +30,13 @@
 
   .ui-document-preview-controls
     %a.ui-document-preview-link{:href => document_media_entry_path(:file => "/media_files/#{@media_entry.media_file.id}?access_hash=#{@media_entry.media_file.access_hash}"), 
-                                        :target => "_blank", :title => "In neuem Fenster öffnen"}
-    .ui-document-preview-prev.hidden{:title => "Vorherige Seite"}
+                                        :target => "_blank", :title => _("Open in new window")}
+    .ui-document-preview-prev.hidden{:title => _("Previous page")}
       .ui-prev-arrow-prev
-    .ui-document-preview-next.hidden{:title => "Nächste Seite"}
+    .ui-document-preview-next.hidden{:title => _("Next page")}
       .ui-prev-arrow-next
     %a.ui-document-preview-open{:href => document_media_entry_path(:file => "/media_files/#{@media_entry.media_file.id}?access_hash=#{@media_entry.media_file.access_hash}"), 
-                                :target => "_blank", :title => "In neuem Fenster öffnen"}
+                                :target => "_blank", :title => _("Open in new window")}
       %i.ui-prev-arrow-open.icon-magnifier.bright
 
 :coffeescript
