--- a/app/views/filter_sets/actions/_edit_filter.html.haml
+++ b/app/views/filter_sets/actions/_edit_filter.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
   %a{:href => edit_filter_set_path(@filter_set, @filter_set[:settings][:filter])}
     %i.icon-filter.mid
-    Filtereinstellungen ändern
+    = _("Change filter settings")
