--- a/app/views/import/_cancel.html.haml
+++ b/app/views/import/_cancel.html.haml
@@ -1,1 +1,2 @@
-%a.link.weak{:href => cancel_import_path, :title => "Import abbrechen"} Abbrechen
+%a.link.weak{:href => cancel_import_path, :title => _("Cancel import")} 
+  = _("Cancel")
