--- a/app/views/filter_sets/filter/_search.html.haml
+++ b/app/views/filter_sets/filter/_search.html.haml
@@ -1,4 +1,4 @@
-%i.icon-lens.mid.mrx{:title => "Suchwort"}
+%i.icon-lens.mid.mrx{:title => _("Search keyword")}
 %li.ui-tag-cloud-item
   %a.ui-tag-button.meta-term{:href => media_resources_path(:search => search)}
     = search
