--- a/app/views/keywords/index.html.haml
+++ b/app/views/keywords/index.html.haml
@@ -8,7 +8,8 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Häufige Schlagworte
+          %h1.title-xl 
+            = _("Popular keywords")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
@@ -22,7 +23,7 @@
           .ui-resources-holder
             .ui-resources-header
               %h2.title-l.ui-resources-title
-                Meine Schlagworte
+                = _("My keywords")
             %ul.ui-tag-cloud
               %li.ui-tag-cloud-item
                 %a.ui-tag-button{:href => "#"} Tag 1
