Fix important typo.

--- a/app/views/filter_sets/_tabs.html.haml
+++ b/app/views/filter_sets/_tabs.html.haml
@@ -7,4 +7,4 @@
   - unless @filter_set.parent_sets.count.zero?
     %li.ui-tabs-item{class: media_set_parents_page? ? "active" : ""}
       %a{:href => parents_media_set_path(@filter_set)}
-        = _("Parent sets)"
+        = _("Parent sets")
