--- a/app/views/application/_create_relations.html.haml
+++ b/app/views/application/_create_relations.html.haml
@@ -7,7 +7,7 @@
   %ul.dropdown-menu.dropdown-menu-progressive.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
     %li.ui-drop-item
       %a{:"data-create-set" => true}    
-        Set erstellen
+        = _("Create set")
     %li.ui-drop-item
       %a{:"data-create-filter-set" => true}    
-        Filterset erstellen
+        = _("Create filter set")
