--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -10,7 +10,7 @@
     %p.ui-footer-copy
       = link_to "http://madek.zhdk.ch" do 
         = image_tag "inserts/image-logo-madek.png", :alt => "Madek - Medienarchiv der Künste", :class => "ui-footer-logo"
-      Z&uuml;rcher Hochschule der K&uuml;nste
+      Z&uuml;rcher Hochschule der K&uuml;nste and contributors
 
 - if clipboard
   = render "application/clipboard" unless current_user.is_guest?
