--- a/app/views/explore/index.html.haml
+++ b/app/views/explore/index.html.haml
@@ -7,7 +7,8 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Erkunden
+          %h1.title-xl
+            = _("Explore")
 
         .ui-body-title-actions= render :partial => "login_action"
 
