--- a/app/views/explore/category.html.haml
+++ b/app/views/explore/category.html.haml
@@ -8,7 +8,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl 
-            Erkunden /
+            = _("Explore / ")
             = "#{@catalog_set.title} /"
             = @category_set.title
 
