--- a/app/views/explore/featured_set.html.haml
+++ b/app/views/explore/featured_set.html.haml
@@ -8,7 +8,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl
-            Erkunden /
+            = _("Explore / ")
             = @featured_set.title
             
         .ui-body-title-actions= render :partial => "login_action"
