--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,7 @@
     %title= AppSettings.title || "Medienarchiv"
     = stylesheet_link_tag "application"
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
+    = javascript_include_tag "i18n/locale/#{session[:locale].dasherize}" if session[:locale]
     = javascript_include_tag "application"
     = javascript_include_tag "test" if Rails.env.test?
     = render :partial => "application/javascript"
