--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,7 +8,7 @@
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
     -# The application_controller makes sure that I18n.locale is set to something valid, so we
     -# can safely use it here.
-    = javascript_include_tag "i18n/locale/#{I18n.locale.dasherize}"
+    = javascript_include_tag "i18n/locale/#{I18n.locale.to_s.dasherize}"
     = javascript_include_tag "application"
     = javascript_include_tag "test" if Rails.env.test?
     = render :partial => "application/javascript"
