--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -11,7 +11,7 @@
       %a#to-search{:href => search_path}
         %i.icon-nav-search
         = _("Search")
-    - if AppSettings.support_url 
+    - unless AppSettings.support_url.blank?
       %li.ui-tabs-item
         %a#to-help{:href => AppSettings.support_url, :target => "_blank"}
           %i.icon-nav-help
